refactored reading data

--- a/DataClean.ipynb
+++ b/DataClean.ipynb
@@ -29,77 +29,11 @@
     "import itertools\n",
     "import numpy as np\n",
     "from io import StringIO\n",
+    "import glob\n",
     "import math\n",
     "import scipy.stats.stats as stats\n",
     "import matplotlib.pyplot as plt \n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "nbpresent": {
-     "id": "bc8266c6-a6b5-4ce7-824d-fe7e018aa1dc"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "giaWalking = pd.read_csv(\"Gia Walking Hopefully.csv\", header = None, skiprows = 2)\n",
-    "giaRunning = pd.read_csv(\"Gia Running.csv\", header = None, skiprows = 2)\n",
-    "giaSitting = pd.read_csv(\"Gia Sitting.csv\", header = None, skiprows = 2)\n",
-    "giaSleeping = pd.read_csv(\"Gia Sleeping.csv\", header = None, skiprows = 2)\n",
-    "giaStanding = pd.read_csv(\"Gia Standing.csv\", header = None, skiprows = 2)\n",
-    "giaClimbing = pd.read_csv(\"Gia Climbing.csv\", header = None, skiprows = 2)\n",
-    "ilonaWalking = pd.read_csv(\"Ilona Walking.csv\", header = None, skiprows = 2)\n",
-    "ilonaRunning = pd.read_csv(\"Ilona Running.csv\", header = None, skiprows = 2)\n",
-    "ilonaSitting = pd.read_csv(\"Ilona Sitting.csv\", header = None, skiprows = 2)\n",
-    "ilonaSleeping = pd.read_csv(\"Ilona Sleeping.csv\", header = None, skiprows = 2)\n",
-    "ilonaStanding = pd.read_csv(\"Ilona Standing.csv\", header = None, skiprows = 2)\n",
-    "ilonaClimbing = pd.read_csv(\"Ilona Climbing.csv\", header = None, skiprows = 2)\n",
-    "liliWalking = pd.read_csv(\"Lili Walking.csv\", header = None, skiprows = 2)\n",
-    "liliRunning = pd.read_csv(\"Lili Running.csv\", header = None, skiprows = 2)\n",
-    "liliSitting = pd.read_csv(\"Lili Sitting.csv\", header = None, skiprows = 2)\n",
-    "liliSleeping = pd.read_csv(\"Lili Sleeping.csv\", header = None, skiprows = 2)\n",
-    "liliStanding = pd.read_csv(\"Lili Standing.csv\", header = None, skiprows = 2)\n",
-    "liliClimbing = pd.read_csv(\"Lili Climbing.csv\", header = None, skiprows = 2)\n",
-    "chrisWalking = pd.read_csv(\"Chris Walking.csv\", header = None, skiprows = 2)\n",
-    "chrisRunning = pd.read_csv(\"Chris Running.csv\", header = None, skiprows = 2)\n",
-    "chrisSitting = pd.read_csv(\"Chris Sitting.csv\", header = None, skiprows = 2)\n",
-    "chrisSleeping = pd.read_csv(\"Chris Sleeping.csv\", header = None, skiprows = 2)\n",
-    "chrisStanding = pd.read_csv(\"Chris Standing.csv\", header = None, skiprows = 2)\n",
-    "chrisClimbing = pd.read_csv(\"Chris Climbing.csv\", header = None, skiprows = 2)\n",
-    "davidWalking = pd.read_csv(\"David Walking.csv\", header = None, skiprows = 2)\n",
-    "davidRunning = pd.read_csv(\"David Running.csv\", header = None, skiprows = 2)\n",
-    "davidSitting = pd.read_csv(\"David Sitting.csv\", header = None, skiprows = 2)\n",
-    "davidSleeping = pd.read_csv(\"David Sleeping.csv\", header = None, skiprows = 2)\n",
-    "davidStanding = pd.read_csv(\"David Standing.csv\", header = None, skiprows = 2)\n",
-    "davidClimbing = pd.read_csv(\"David Climbing.csv\", header = None, skiprows = 2)\n",
-    "juliaWalking = pd.read_csv(\"Julia Walking.csv\", header = None, skiprows = 2)\n",
-    "juliaRunning = pd.read_csv(\"Julia Running.csv\", header = None, skiprows = 2)\n",
-    "juliaSitting = pd.read_csv(\"Julia Sitting.csv\", header = None, skiprows = 2)\n",
-    "juliaSleeping = pd.read_csv(\"Julia Sleeping.csv\", header = None, skiprows = 2)\n",
-    "juliaStanding = pd.read_csv(\"Julia Standing.csv\", header = None, skiprows = 2)\n",
-    "juliaClimbing = pd.read_csv(\"Julia Climbing.csv\", header = None, skiprows = 2)\n",
-    "noelWalking = pd.read_csv(\"Noel Walking.csv\", header = None, skiprows = 2)\n",
-    "noelRunning = pd.read_csv(\"Noel Running.csv\", header = None, skiprows = 2)\n",
-    "noelSitting = pd.read_csv(\"Noel Sitting.csv\", header = None, skiprows = 2)\n",
-    "noelSleeping = pd.read_csv(\"Noel Sleeping.csv\", header = None, skiprows = 2)\n",
-    "noelStanding = pd.read_csv(\"Noel Standing.csv\", header = None, skiprows = 2)\n",
-    "noelClimbing = pd.read_csv(\"Noel Climbing.csv\", header = None, skiprows = 2)\n",
-    "katieWalking = pd.read_csv(\"Katie Walking.csv\", header = None, skiprows = 2)\n",
-    "katieRunning = pd.read_csv(\"Katie Running.csv\", header = None, skiprows = 2)\n",
-    "katieSitting = pd.read_csv(\"Katie Sitting.csv\", header = None, skiprows = 2)\n",
-    "katieSleeping = pd.read_csv(\"Katie Sleeping.csv\", header = None, skiprows = 2)\n",
-    "katieStanding = pd.read_csv(\"Katie Standing.csv\", header = None, skiprows = 2)\n",
-    "katieClimbing = pd.read_csv(\"Katie Climbing.csv\", header = None, skiprows = 2)\n",
-    "deneeWalking = pd.read_csv(\"Denee Walking.csv\", header = None, skiprows = 2)\n",
-    "deneeRunning = pd.read_csv(\"Denee Running.csv\", header = None, skiprows = 2)\n",
-    "deneeSitting = pd.read_csv(\"Denee Sitting.csv\", header = None, skiprows = 2)\n",
-    "deneeSleeping = pd.read_csv(\"Denee Sleeping.csv\", header = None, skiprows = 2)\n",
-    "deneeStanding = pd.read_csv(\"Denee Standing.csv\", header = None, skiprows = 2)\n",
-    "deneeClimbing = pd.read_csv(\"Denee Climbing.csv\", header = None, skiprows = 2)"
    ]
   },
   {
@@ -138,77 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "nbpresent": {
-     "id": "5ca7fe1f-226f-4d81-8c88-2f7fca679ca2"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df = createDF(\"gia\", \"walking\", giaWalking)\n",
-    "df = df.append(createDF(\"gia\", \"running\", giaRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"gia\", \"sleeping\", giaSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"gia\", \"climbing\", giaClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"gia\", \"sitting\", giaSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"gia\", \"standing\", giaStanding), ignore_index=True)\n",
-    "\n",
-    "df = df.append(createDF(\"ilona\", \"walking\", ilonaWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"ilona\", \"running\", ilonaRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"ilona\", \"sleeping\", ilonaSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"ilona\", \"climbing\", ilonaClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"ilona\", \"sitting\", ilonaSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"ilona\", \"standing\", ilonaStanding), ignore_index=True)\n",
-    "\n",
-    "df = df.append(createDF(\"lili\", \"walking\", liliWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"lili\", \"running\", liliRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"lili\", \"sleeping\", liliSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"lili\", \"climbing\", liliClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"lili\", \"sitting\", liliSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"lili\", \"standing\", liliStanding), ignore_index=True)\n",
-    "               \n",
-    "df = df.append(createDF(\"chris\", \"walking\", chrisWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"chris\", \"running\", chrisRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"chris\", \"sleeping\", chrisSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"chris\", \"climbing\", chrisClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"chris\", \"sitting\", chrisSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"chris\", \"standing\", chrisStanding), ignore_index=True)\n",
-    "\n",
-    "df = df.append(createDF(\"david\", \"walking\", davidWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"david\", \"running\", davidRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"david\", \"sleeping\", davidSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"david\", \"climbing\", davidClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"david\", \"sitting\", davidSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"david\", \"standing\", davidStanding), ignore_index=True)\n",
-    "\n",
-    "df = df.append(createDF(\"julia\", \"walking\", juliaWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"running\", juliaRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"sleeping\", juliaSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"climbing\", juliaClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"sitting\", juliaSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"julia\", \"standing\", juliaStanding), ignore_index=True)\n",
-    "\n",
-    "df = df.append(createDF(\"noel\", \"walking\", noelWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"noel\", \"running\", noelRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"noel\", \"sleeping\", noelSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"noel\", \"climbing\", noelClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"noel\", \"sitting\", noelSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"noel\", \"standing\", noelStanding), ignore_index=True)\n",
-    "\n",
-    "df = df.append(createDF(\"katie\", \"walking\", katieWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"katie\", \"running\", katieRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"katie\", \"sleeping\", katieSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"katie\", \"climbing\", katieClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"katie\", \"sitting\", katieSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"katie\", \"standing\", katieStanding), ignore_index=True)\n",
-    "\n",
-    "df = df.append(createDF(\"denee\", \"walking\", deneeWalking), ignore_index=True)\n",
-    "df = df.append(createDF(\"denee\", \"running\", deneeRunning), ignore_index=True)\n",
-    "df = df.append(createDF(\"denee\", \"sleeping\", deneeSleeping), ignore_index=True)\n",
-    "df = df.append(createDF(\"denee\", \"climbing\", deneeClimbing), ignore_index=True)\n",
-    "df = df.append(createDF(\"denee\", \"sitting\", deneeSitting), ignore_index=True)\n",
-    "df = df.append(createDF(\"denee\", \"standing\", deneeStanding), ignore_index=True)"
+    "#find all csv files in a directory\n",
+    "df = pd.DataFrame()\n",
+    "for file in glob.glob(\"data/*.csv\"):\n",
+    "    csv = pd.read_csv(file, header = None, skiprows = 2)\n",
+    "    file_name = file.split()\n",
+    "    subject = (file_name[0][5:]).lower()\n",
+    "    activity = (file_name[1][:-4]).lower()\n",
+    "    df = df.append(createDF(subject, activity, csv), ignore_index=True)\n",
+    "    \n",
+    "print(df.shape)\n",
+    "df.head()"
    ]
   },
   {
@@ -978,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   },
   "nbpresent": {
    "slides": {
