results with 10-fold cross-validation

--- a/DataClean.ipynb
+++ b/DataClean.ipynb
@@ -1292,12 +1292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(566, 104)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)"
+   ]
   },
   {
    "cell_type": "code",
